<?xml version="1.0"?>
<package format="3">
  <name>uav_control</name>
  <version>0.1.0</version>
  <description>Keyboard teleop for UAV via MAVROS/PX4</description>
  <maintainer email="tiago.genet@ensta.fr">Tiago</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>mavros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>